Fix reset button overlapping the Apply button

--- a/wwm_rubik_style.scss
+++ b/wwm_rubik_style.scss
@@ -4641,6 +4641,6 @@ input.form-submit {
 
 #views-exposed-form-admin-views-node-system-1 {
   .form-submit {
-    position: absolute;
+    position: static;
   }
 }
